--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,12 @@
     <string name="sign_out">Sign Out</string>
     <string name="disconnect">Disconnect</string>
     <string name="loading">Loading…</string>
+    <string name="title_text">StrengthTracker</string>
 
     <string name="action_settings">Settings</string>
+
+    <!-- Content Description for images -->
+    <string name="desc_google_icon">Google Logo</string>
 
     <string name="server_client_id">221576156646-i3hlt6616b2uk9rt0b6snmbd4umkpri5.apps.googleusercontent.com</string>
 </resources>
