--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="signed_out">Signed out</string>
     <string name="email"></string>
     <string name="nav_header_status">You are not logged in yet</string>
-    <string name="tap_to_login">Tap to login</string>
+    <string name="tap_to_login">Tap to view profile</string>
     <string name="sign_out">Sign Out</string>
     <string name="disconnect">Disconnect</string>
     <string name="loading">Loading…</string>
@@ -23,4 +23,7 @@
     <string name="desc_google_icon">Google Logo</string>
 
     <string name="server_client_id">221576156646-i3hlt6616b2uk9rt0b6snmbd4umkpri5.apps.googleusercontent.com</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
