Spinner now entering exercise into database OnBackPressed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">StrengthTracker</string>
     <string name="sign_in_header">User Profile</string>
 
-    <string-array name="planets_array">
+    <string-array name="exercise_array">
         <item>Bench press</item>
         <item>Back squat</item>
         <item>Deadlift</item>
