--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,9 @@
     <string name="all_deleted">All notes deleted</string>
     <string name="title_activity_editor">EditorActivity</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="reps">Reps</string>
+    <string name="weight">Weight (kg)</string>
+
     <string name="action_settings">Settings</string>
     <string name="new_note">New exercise</string>
     <string name="note_updated">Note updated</string>
