Added home screen widget

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,8 @@
     <string name="enter_note_here">Enter note here</string>
 
     <string name="date">Select date</string>
+    <string name="widget">Days since last workout:</string>
+
 
     <string name="set">Set 1:</string>
 
