--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,8 +39,8 @@
     <string name="action_settings">Settings</string>
     <string name="new_note">New exercise</string>
     <string name="note_updated">Note updated</string>
-    <string name="action_delete">Delete</string>
-    <string name="note_deleted">Note deleted</string>
+    <string name="content_save">Save</string>
+    <string name="exercise_saved">Exercise saved</string>
     <string name="note">Note</string>
     <string name="enter_note_here">Enter note here</string>
 
