--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
-    <string name="delete_all">Delete all?</string>
+    <string name="delete_all">Delete all exercises</string>
     <string name="title_activity_settings1">Settings</string>
 
     <!-- Strings related to Settings -->
@@ -120,4 +120,11 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="home">Home</string>
+    <string name="history">History</string>
+    <string name="calendar">Calendar</string>
+    <string name="progress">Profile</string>
+    <string name="tools">Tools</string>
+    <string name="timer">Timer</string>
+    <string name="settings">Settings</string>
 </resources>
